# FYP

./: .gitignore  README.md  log.md  main.py  pyproject.toml
_archive/llm-engine/: README.md  chat_history.py  llama_client.py  onos_client.py  onos_config.py  test-groq-api.py  test_agent.py
backend/: main.py
backend/api/: auth.py  chat.py  chat_conversations.py  config_samples.py  devices.py  docs_assets.py  hosts.py  onos.py  tests.py
backend/schemas/: auth.py  chat.py  config_samples.py  devices.py  tests.py
database/: README.md  __init__.py  create_missing_tables.py  database.py  init_db.py  log.md  migrate_chat_history_to_conversations.py  models.py  seed_data.py
database/data/: config_samples.json  devices.json  eval.json  users.json
database/rag/: __init__.py  embedded_client.py  embedded_server.py  model_test.py
diagram/: ERD.drawio  backend-logic-architecture.drawio  fyp-frontend-design.drawio  system-architecture.drawio
evaluation/: README.md  analyze_eval_markdown.py  eval-10-12-summary.csv  eval-10-12.csv  eval-10-12.md  llm-acc-evaluation.md  llm-engine-testing.md  measure_similarity.py  response-time.md
frontend/: README.md  index.html  log.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
fyp-frontend/: package-lock.json  package.json
llm-engine/: README.md  agent.py  groq_client.py  llama-client.py  llama_client.py  log.md  onos_client.py  test-agent.py  testing.md
onos-testbed/: README.md  docker-compose.yml  docker-notes.md  logs.md  mininet-notes.md  onos-notes.md
(+66 files in other folders)
